; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_id3.c_promote_framename.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_id3.c_promote_framename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"COM\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"TAL\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"TBP\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"TCM\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"TCO\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"TCR\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"TDA\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"TDY\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"TEN\00", align 1
@.str.9 = private unnamed_addr constant [4 x i8] c"TFT\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"TIM\00", align 1
@.str.11 = private unnamed_addr constant [4 x i8] c"TKE\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"TLA\00", align 1
@.str.13 = private unnamed_addr constant [4 x i8] c"TLE\00", align 1
@.str.14 = private unnamed_addr constant [4 x i8] c"TMT\00", align 1
@.str.15 = private unnamed_addr constant [4 x i8] c"TOA\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"TOF\00", align 1
@.str.17 = private unnamed_addr constant [4 x i8] c"TOL\00", align 1
@.str.18 = private unnamed_addr constant [4 x i8] c"TOR\00", align 1
@.str.19 = private unnamed_addr constant [4 x i8] c"TOT\00", align 1
@.str.20 = private unnamed_addr constant [4 x i8] c"TP1\00", align 1
@.str.21 = private unnamed_addr constant [4 x i8] c"TP2\00", align 1
@.str.22 = private unnamed_addr constant [4 x i8] c"TP3\00", align 1
@.str.23 = private unnamed_addr constant [4 x i8] c"TP4\00", align 1
@.str.24 = private unnamed_addr constant [4 x i8] c"TPA\00", align 1
@.str.25 = private unnamed_addr constant [4 x i8] c"TPB\00", align 1
@.str.26 = private unnamed_addr constant [4 x i8] c"TRC\00", align 1
@.str.27 = private unnamed_addr constant [4 x i8] c"TRK\00", align 1
@.str.28 = private unnamed_addr constant [4 x i8] c"TSI\00", align 1
@.str.29 = private unnamed_addr constant [4 x i8] c"TSS\00", align 1
@.str.30 = private unnamed_addr constant [4 x i8] c"TT1\00", align 1
@.str.31 = private unnamed_addr constant [4 x i8] c"TT2\00", align 1
@.str.32 = private unnamed_addr constant [4 x i8] c"TT3\00", align 1
@.str.33 = private unnamed_addr constant [4 x i8] c"TXT\00", align 1
@.str.34 = private unnamed_addr constant [4 x i8] c"TXX\00", align 1
@.str.35 = private unnamed_addr constant [4 x i8] c"TYE\00", align 1
@__const.promote_framename.old = private unnamed_addr constant [37 x i8*] [i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.30, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.35, i32 0, i32 0)], align 16
@.str.36 = private unnamed_addr constant [5 x i8] c"COMM\00", align 1
@.str.37 = private unnamed_addr constant [5 x i8] c"TALB\00", align 1
@.str.38 = private unnamed_addr constant [5 x i8] c"TBPM\00", align 1
@.str.39 = private unnamed_addr constant [5 x i8] c"TCOM\00", align 1
@.str.40 = private unnamed_addr constant [5 x i8] c"TCON\00", align 1
@.str.41 = private unnamed_addr constant [5 x i8] c"TCOP\00", align 1
@.str.42 = private unnamed_addr constant [5 x i8] c"TDAT\00", align 1
@.str.43 = private unnamed_addr constant [5 x i8] c"TDLY\00", align 1
@.str.44 = private unnamed_addr constant [5 x i8] c"TENC\00", align 1
@.str.45 = private unnamed_addr constant [5 x i8] c"TFLT\00", align 1
@.str.46 = private unnamed_addr constant [5 x i8] c"TIME\00", align 1
@.str.47 = private unnamed_addr constant [5 x i8] c"TKEY\00", align 1
@.str.48 = private unnamed_addr constant [5 x i8] c"TLAN\00", align 1
@.str.49 = private unnamed_addr constant [5 x i8] c"TLEN\00", align 1
@.str.50 = private unnamed_addr constant [5 x i8] c"TMED\00", align 1
@.str.51 = private unnamed_addr constant [5 x i8] c"TOPE\00", align 1
@.str.52 = private unnamed_addr constant [5 x i8] c"TOFN\00", align 1
@.str.53 = private unnamed_addr constant [5 x i8] c"TOLY\00", align 1
@.str.54 = private unnamed_addr constant [5 x i8] c"TORY\00", align 1
@.str.55 = private unnamed_addr constant [5 x i8] c"TOAL\00", align 1
@.str.56 = private unnamed_addr constant [5 x i8] c"TPE1\00", align 1
@.str.57 = private unnamed_addr constant [5 x i8] c"TPE2\00", align 1
@.str.58 = private unnamed_addr constant [5 x i8] c"TPE3\00", align 1
@.str.59 = private unnamed_addr constant [5 x i8] c"TPE4\00", align 1
@.str.60 = private unnamed_addr constant [5 x i8] c"TPOS\00", align 1
@.str.61 = private unnamed_addr constant [5 x i8] c"TPUB\00", align 1
@.str.62 = private unnamed_addr constant [5 x i8] c"TSRC\00", align 1
@.str.63 = private unnamed_addr constant [5 x i8] c"TRDA\00", align 1
@.str.64 = private unnamed_addr constant [5 x i8] c"TRCK\00", align 1
@.str.65 = private unnamed_addr constant [5 x i8] c"TSIZ\00", align 1
@.str.66 = private unnamed_addr constant [5 x i8] c"TSSE\00", align 1
@.str.67 = private unnamed_addr constant [5 x i8] c"TIT1\00", align 1
@.str.68 = private unnamed_addr constant [5 x i8] c"TIT2\00", align 1
@.str.69 = private unnamed_addr constant [5 x i8] c"TIT3\00", align 1
@.str.70 = private unnamed_addr constant [5 x i8] c"TEXT\00", align 1
@.str.71 = private unnamed_addr constant [5 x i8] c"TXXX\00", align 1
@.str.72 = private unnamed_addr constant [5 x i8] c"TYER\00", align 1
@__const.promote_framename.new = private unnamed_addr constant [37 x i8*] [i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.37, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.38, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.39, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.40, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.41, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.42, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.43, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.44, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.45, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.46, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.47, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.48, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.49, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.50, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.51, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.52, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.53, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.54, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.55, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.56, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.57, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.58, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.59, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.60, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.61, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.62, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.63, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.64, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.65, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.66, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.67, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.68, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.69, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.70, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.71, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.72, i32 0, i32 0)], align 16
@VERBOSE3 = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str.73 = private unnamed_addr constant [35 x i8] c"Translated ID3v2.2 frame %s to %s\0A\00", align 1
@.str.74 = private unnamed_addr constant [44 x i8] c"Ignoring untranslated ID3v2.2 frame %c%c%c\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @promote_framename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @promote_framename(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca [37 x i8*], align 16
  %8 = alloca [37 x i8*], align 16
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = bitcast [37 x i8*]* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %9, i8* align 16 bitcast ([37 x i8*]* @__const.promote_framename.old to i8*), i64 296, i1 false)
  %10 = bitcast [37 x i8*]* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %10, i8* align 16 bitcast ([37 x i8*]* @__const.promote_framename.new to i8*), i64 296, i1 false)
  store i64 0, i64* %6, align 8
  br label %11

11:                                               ; preds = %40, %2
  %12 = load i64, i64* %6, align 8
  %13 = icmp ult i64 %12, 37
  br i1 %13, label %14, label %43

14:                                               ; preds = %11
  %15 = load i8*, i8** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = getelementptr inbounds [37 x i8*], [37 x i8*]* %7, i64 0, i64 %16
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @strncmp(i8* %15, i8* %18, i32 3)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %39, label %21

21:                                               ; preds = %14
  %22 = load i8*, i8** %5, align 8
  %23 = load i64, i64* %6, align 8
  %24 = getelementptr inbounds [37 x i8*], [37 x i8*]* %8, i64 0, i64 %23
  %25 = load i8*, i8** %24, align 8
  %26 = call i32 @memcpy(i8* %22, i8* %25, i32 4)
  %27 = load i64, i64* @VERBOSE3, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %38

29:                                               ; preds = %21
  %30 = load i32, i32* @stderr, align 4
  %31 = load i64, i64* %6, align 8
  %32 = getelementptr inbounds [37 x i8*], [37 x i8*]* %7, i64 0, i64 %31
  %33 = load i8*, i8** %32, align 8
  %34 = load i64, i64* %6, align 8
  %35 = getelementptr inbounds [37 x i8*], [37 x i8*]* %8, i64 0, i64 %34
  %36 = load i8*, i8** %35, align 8
  %37 = call i32 (i32, i8*, ...) @fprintf(i32 %30, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.73, i64 0, i64 0), i8* %33, i8* %36)
  br label %38

38:                                               ; preds = %29, %21
  store i32 0, i32* %3, align 4
  br label %62

39:                                               ; preds = %14
  br label %40

40:                                               ; preds = %39
  %41 = load i64, i64* %6, align 8
  %42 = add i64 %41, 1
  store i64 %42, i64* %6, align 8
  br label %11

43:                                               ; preds = %11
  %44 = load i64, i64* @VERBOSE3, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %61

46:                                               ; preds = %43
  %47 = load i32, i32* @stderr, align 4
  %48 = load i8*, i8** %5, align 8
  %49 = getelementptr inbounds i8, i8* %48, i64 0
  %50 = load i8, i8* %49, align 1
  %51 = sext i8 %50 to i32
  %52 = load i8*, i8** %5, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 1
  %54 = load i8, i8* %53, align 1
  %55 = sext i8 %54 to i32
  %56 = load i8*, i8** %5, align 8
  %57 = getelementptr inbounds i8, i8* %56, i64 2
  %58 = load i8, i8* %57, align 1
  %59 = sext i8 %58 to i32
  %60 = call i32 (i32, i8*, ...) @fprintf(i32 %47, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.74, i64 0, i64 0), i32 %51, i32 %55, i32 %59)
  br label %61

61:                                               ; preds = %46, %43
  store i32 -1, i32* %3, align 4
  br label %62

62:                                               ; preds = %61, %38
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @fprintf(i32, i8*, ...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
